--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-	/* 
+	
 	--darkgray: #484747;
 	--mediumgray: #929292;
 	--lightgray: #D8D8D8;
@@ -18,10 +18,34 @@
 	--red: #D67676;
 	--blue: #0082ac;
 	--light-blue: #55b4d1;
-	*/
+	
 
 
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.cust-orange {
+	color: var(--orange);
+}
+.cust-red {
+	color: var(--red);
+}
+.cust-yellow {
+	color: var(--red);
+}
+
+.bg-cust-yellow {
+		background-color: var(--yellow);
+}
+.bg-cust-orange {
+		background-color: var(--orange);
+}
+.bg-cust-red {
+		background-color: var(--red);
+}
+
+.cust-font {
+	font-family: 'Monda', sans-serif;
 }
