--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,6 +36,22 @@
 	color: var(--yellow);
 }
 
+
+.btn-cust-yellow {
+	background-color: var(--yellow);
+}
+.btn-cust-yellow:hover {
+	background-color: var(--orange);
+}
+
+.btn-cust-orange {
+	background-color: var(--orange);
+}
+.btn-cust-orange:hover {
+	background-color: var(--yellow);
+}
+
+
 .bg-cust-yellow {
 		background-color: var(--yellow);
 }
@@ -45,6 +61,22 @@
 .bg-cust-red {
 		background-color: var(--red);
 }
+
+
+.btn-main-yellow {
+	background-color: var(--yellow);
+}
+.btn-main-yellow:hover {
+	background-color:rgb(255, 189, 131);
+}
+
+.btn-main-orange {
+	background-color: var(--orange);
+}
+.btn-main-orange:hover {
+	background-color:rgb(255, 157, 128);
+}
+
 
 .cust-font {
 	font-family: 'Monda', sans-serif;
